fix: fix styling bug on mobile with part subtitle in configurator

--- a/src/style.css
+++ b/src/style.css
@@ -323,6 +323,7 @@
     .configurator__subtitle {
       font-size: 20px;
       width: 25rem;
+      max-width: 80vw;
       text-align: center;
     }
   
